home-page-commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,15 +9,15 @@
     </div> -->
 
 
-    <div class="container-fluid">
+    <div class="container-fluid border border-dark">
 
-        <div class="row border border-dark w-100">
+        <div class="row  w-100 " style="margin-right:0; padding-right:0; ">
 
-            <div class=" col-xl-2 d-none d-xl-block border border-dark">  <app-sidebar></app-sidebar> </div>
+            <div class=" col-xl-2 d-none d-xl-block ">  <app-sidebar></app-sidebar> </div>
 
             <div class="col-lg-12 col-12 d-xl-none d-lg-block"><app-navbar></app-navbar></div>
 
-            <div class="col-xl-10 col-12" style="background-color:black;"><router-outlet></router-outlet></div>
+            <div class="col-xl-10 col-12 d-flex" style="margin-right:0; padding-right:0;" ><router-outlet></router-outlet></div>
 
             <!-- <div class="col-xl-10 col-12" style="background-color:lightgray;"><app-footer></app-footer></div> -->
 
