--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
 <footer class="footer">
-    <br><p>COPYRIGHT &copy; 2023 AYNA - ALL RIGHTS RESERVED.</p><br>
-  </footer>
+  <br>
+  <p>COPYRIGHT &copy; 2023 AYNA - ALL RIGHTS RESERVED.</p><br>
+</footer>
