--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,70 +1,283 @@
-/* *{
-    color:white;
-} */
+* {
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 2px;
+}
 
-.fixed-bg-image{
-    
-    background-image: url('https://thumbs.dreamstime.com/b/woman-praying-free-bird-enjoying-nature-sunset-background-hope-concept-94227839.jpg');
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height:800px;
-    margin-left: 10px;
+.fixed-bg-image {
+
+  background-image: url('/assets/images/oss.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 800px;
+  padding: 0;
 }
 
 .center-align {
-    text-align: center;
+  text-align: center;
+}
+
+.title {
+  margin-bottom: 20px;
+}
+
+.subtitle {
+  margin-bottom: 20px;
+}
+
+.email-input {
+  width: 250px;
+  height: 40px;
+  padding: 10px;
+  border-radius: 0;
+  border: 1px solid gray;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+}
+
+.email-input.focused {
+  border-color: black;
+  box-shadow: 0 0 10px black;
+}
+
+.signup-btn {
+  width: 250px;
+  height: 40px;
+  padding: 10px;
+  border-radius: 0;
+  border: 1px solid gray;
+  background-color: gray;
+  color: white;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+  margin-top: 20px;
+}
+
+.signup-btn.dark {
+  background-color: black;
+  border-color: black;
+}
+
+.confirm-msg {
+  margin-top: 20px;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.confirm-msg.visible {
+  opacity: 1;
+}
+
+/* one stop solution */
+.one-stop-solution {
+  margin: auto;
+  color: white;
+  width: 60%;
+  height: 800px;
+  padding-top: 15%;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+.title {
+  font-size: xxx-large;
+}
+
+.subtitle {
+  font-size: x-large;
+}
+
+.button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  padding: 14px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  width: auto;
+  letter-spacing: 2px;
+  font-weight: bold;
+
+}
+
+.button1 {
+  color: white;
+  border: 2px solid white;
+}
+
+.button1:hover {
+  background-color: white;
+  color: black;
+
+}
+
+.button2 {
+  color: black;
+  border: 2px solid black;
+}
+
+.button2:hover {
+  background-color: black;
+  color: white;
+
+}
+
+.home-img {
+
+  background-size: cover;
+  height: 300px;
+  overflow: hidden;
+}
+
+.home-content {
+  margin: auto;
+  color: black;
+  text-align: center;
+  padding: 20px;
+
+}
+
+.home-item-title {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 10px;
+
+}
+
+.touch {
+  padding-top: 80px;
+  width: 65%;
+  margin: auto;
+  text-align: center;
+}
+
+.form-group {
+  display: flex;
+}
+
+.touch-title {
+  font-size: xx-large;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+input.form-control {
+  border: none;
+  background-color: rgb(239, 235, 235);
+  width: 70%;
+}
+
+input.form-control:focus {
+  background-color: white;
+  outline: none;
+}
+
+/* input.form-control:invalid {
+    border: 1px solid red;
+  } */
+
+input.form-control:valid {
+  border: 1px solid green;
+}
+
+.email {
+  border-radius: 0;
+  height: 50px;
+  margin-right: 20px;
+}
+
+input.form-control::-webkit-input-placeholder {
+  font-size: 16px;
+  padding: 10px;
+  position: relative;
+  top: auto;
+  right: auto;
+  color: black;
+}
+
+input.form-control:focus::-webkit-input-placeholder {
+  font-size: 12px;
+  padding: 2px 10px 0 0;
+  position: absolute;
+  top: 0;
+  left: 10px;
+  transition: 0.2s ease-out;
+}
+
+.contact-section {
+  width: 65%;
+  margin: auto;
+  letter-spacing: normal;
+}
+
+#contact-heading {
+  font-size: x-large;
+
+}
+
+.map-class {
+  height: 600px;
+
+}
+
+.whatsapp-icon {
+  background-image: url(/assets/images/wp-logo.png);
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-size: cover;
+  margin-right: 10px;
+}
+
+.wp-btn {
+  background-color: #0e672e;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 0;
+  display: flex;
+  align-items: center;
+  width: 300px;
+}
+
+
+
+@media (max-width: 992px) {
+  .form-group {
+    display: block;
   }
-  
-  .title {
-    margin-bottom: 20px;
-  }
-  
-  .subtitle {
-    margin-bottom: 20px;
-  }
-  
-  .email-input {
-    width: 250px;
-    height: 40px;
-    padding: 10px;
+
+  #email {
     border-radius: 0;
-    border: 1px solid gray;
-    text-align: center;
-    transition: all 0.3s ease-in-out;
+    height: 50px;
+    width: 100%;
   }
-  
-  .email-input.focused {
-    border-color: black;
-    box-shadow: 0 0 10px black;
+
+  .button {
+    margin-top: 15px;
+    width: 100%;
   }
-  
-  .signup-btn {
-    width: 250px;
-    height: 40px;
-    padding: 10px;
-    border-radius: 0;
-    border: 1px solid gray;
-    background-color: gray;
-    color: white;
+
+  .contact-section {
+    width: 90%;
+    margin: auto;
+    letter-spacing: normal;
+  }
+
+  #contact-title {
     text-align: center;
-    transition: all 0.3s ease-in-out;
+  }
+
+  .map-class {
     margin-top: 20px;
+    height: 300px;
   }
-  
-  .signup-btn.dark {
-    background-color: black;
-    border-color: black;
-  }
-  
-  .confirm-msg {
-    margin-top: 20px;
-    text-align: center;
-    transition: all 0.3s ease-in-out;
-    opacity: 0;
-  }
-  
-  .confirm-msg.visible {
-    opacity: 1;
-  }
+
+}
