--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -5,7 +5,7 @@
     <!--This is product card loop for md - xl screen-->
     <div class="container">
         <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-none d-md-block" *ngFor="let product of products" style="background-color: darkgreen; color:black;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-none d-md-block" *ngFor="let product of products" style=" color:black;">
                
                 <a href="#">
                 <div class="card text-center " >
@@ -24,7 +24,7 @@
         <!--This is product card loop for md - xl screen-->
         <div class="container">
             <div class="row">
-                <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-md-none d-sm-block" *ngFor="let product of products" style="background-color: darkgreen; color:black;">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-4 d-md-none d-sm-block" *ngFor="let product of products" style=" color:black;">
                    <a href="#">
                     <div class="card text-center card-sm" >
                         <img src= {{product.imgPath}} alt="product Name" class="card-img-top-sm img-fluid">
