--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,11 +2,15 @@
     <P>This is a side bar</P>
 </div> -->
 
-<div class="sidebar">
+<!-- color is #656d56 accent is #ddd7c6 -->
+
+<div class="sidebar ">
   
         <div class="nav-items">
-            <a routerLink="" [routerLinkActive]="['active']" class="nav-link">AYNA</a><br>
-            <a routerLink="main" [routerLinkActive]="['active']" class="nav-link">Home</a><br>
-            <a routerLink="products" [routerLinkActive]="['active']" class="nav-link">Product Categories</a><br>
+            <a routerLink="" [routerLinkActive]="['active']" class="nav-link">
+                <img src="assets/logo/ayna.jpg" alt="Ayna" width="160px" height="120px" style="vertical-align:middle; margin:80px 0;">
+            </a>
+            <a routerLink="main" [routerLinkActive]="['active']" class="nav-link" >Home</a>
+            <a routerLink="products" [routerLinkActive]="['active']" class="nav-link">Product Categories</a>
           </div>
 </div>
