--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,21 @@
-<div class="offcanvas offcanvas-start" id="demo">
-    <div class="offcanvas-header">
-      <h1 class="offcanvas-title">Heading</h1>
-      <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
-    </div>
-    <div class="offcanvas-body">
-      <a routerLink="" data-bs-dismiss="offcanvas">Home</a><br>
-      <a routerLink="products" data-bs-dismiss="offcanvas">Product Catrgories</a><br>
-      <button class="btn btn-secondary" type="button">A Button</button>
-    </div>
+<div class="offcanvas offcanvas-start" id="demo" style="background-color:#656d56 ;">
+  <div class="offcanvas-header">
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+      style="margin-left:92%; margin-top:5px; "></button>
   </div>
 
- 
-    <button  type="button" data-bs-toggle="offcanvas" data-bs-target="#demo" >
-        <i class="fa fa-bars"></i>
+  <div class="nav-items">
+    <a routerLink="main" [routerLinkActive]="['active']" class="nav-link">Home</a>
+    <a routerLink="products" [routerLinkActive]="['active']" class="nav-link">Product Categories</a>
+  </div>
 
-    </button>
-    <p align="center"> This is nav bar for Ayna</p>
- 
+</div>
+
+
+<button class="button" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+  <i class="fa fa-bars"></i>
+</button>
+
+<a routerLink="" class="logo">
+  <img src="assets/logo/ayna.jpg" alt="Ayna" width="120px" height="80px" style="margin-top:20px; margin-bottom:20px;">
+</a>
