--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -3,37 +3,33 @@
 }
 
 .sidebar {
-    /* width:250px; */
+  
     height: 100%;
-    /* // position:fixed; */
-    background-color: bisque;
+   
 
 }
 
 .nav-items {
-    margin: 10px;
-    margin-top: 60px;
-    padding-top: 60px;
+    margin-left: 20px;
     position: fixed;
     font-size: 18px;
-    text-align: center;
+    text-align: justify;
 }
 
 .nav-link {
+    margin-bottom: 10px;
     display: block;
-    padding: 10px 0;
-    color: yellow;
+    color: #656d56;
     text-decoration: none;
     transition: all 0.3s ease-in-out;
 }
 
 .nav-link:hover {
-    /* background-color: lightgray; */
-    color: red;
+   
+    color: #939989;
     cursor: pointer;
 }
 
 .active {
-    /* background-color: black; */
-    color:black;
+    font-weight: bold;
 }
